# The_Ray_Tracer_Challenge

./: CMakeLists.txt  README.md
apps/: raytracer_main.cpp
src/lib/: canvas.cpp  canvas.h  color.cpp  color.h  tuple.cpp  tuple.h
tests/: CMakeLists.txt  tuple_bdd_tests.cpp  tuple_tests.cpp
